# SimpleMem

./: README.md  config.py.example  main.py  pyproject.toml
MCP/server/core/: memory_builder.py
core/: hybrid_retriever.py  memory_builder.py
simplemem/: __init__.py  system.py
simplemem/config/: __init__.py
simplemem/core/: __init__.py
simplemem/database/: __init__.py  vector_store.py
simplemem/models/: __init__.py  memory_entry.py
simplemem/utils/: __init__.py  embedding.py  llm_client.py
utils/: embedding.py
